# portage

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .gitignorerevs  .pre-commit-config.yaml  .travis.yml  AUTHORS  COPYING  ChangeLog  ChangeLog.000  DEVELOPING  MANIFEST.in  Makefile  Makefile.am  NEWS  README  README.md  RELEASE-NOTES  TEST-NOTES  TODO  acinclude.m4  aclocal.m4  autogen.sh  configure.ac  configure.in  make-man-tarball.sh  make.conf-repatch.sh  make.conf.example-repatch.sh  make.conf.txt  meson.build  meson_options.txt  mkrelease.sh  pylintrc  pyproject.toml  run-pylint  runtests  runtests.sh  setup.py  subst-install.in  subst-install.vars.in  (+7 more)
cnf/: METADATA  Makefile.in  binrepos.conf  dispatch-conf.conf  etc-update.conf  make.conf  make.conf.alpha  make.conf.alpha.diff  make.conf.amd64  make.conf.amd64-fbsd.diff  make.conf.amd64.diff  make.conf.arm  make.conf.arm.diff  make.conf.example  make.conf.example.alpha.diff  make.conf.example.amd64-fbsd.diff  make.conf.example.amd64.diff  make.conf.example.arc.diff  make.conf.example.arm.diff  make.conf.example.arm64.diff  make.conf.example.hppa.diff  make.conf.example.ia64.diff  make.conf.example.loong.diff  make.conf.example.m68k.diff  make.conf.example.mips.diff  make.conf.example.ppc.diff  make.conf.example.ppc64.diff  make.conf.example.riscv.diff  make.conf.example.s390.diff  make.conf.example.sh.diff  make.conf.example.sparc-fbsd.diff  make.conf.example.sparc.diff  make.conf.example.x86-fbsd.diff  make.conf.example.x86.diff  make.conf.hppa  make.conf.hppa.diff  make.conf.ia64  make.conf.ia64.diff  make.conf.m68k.diff  make.conf.mac  (+22 more)
cnf/logrotate.d/: elog-save-summary
cnf/repo.postsync.d/: example
cnf/sets/: portage.conf
doc/: Makefile  config.docbook  custom.xsl  dependency_resolution.docbook  meson.build  package.docbook  portage.docbook  qa.docbook
doc/api/: Makefile  conf.py  index.rst  meson.build
doc/config/: bashrc.docbook  sets.docbook
doc/dependency_resolution/: decision_making.docbook  package_modeling.docbook  task_scheduling.docbook
doc/fragment/: meson.build  version  version.in
doc/package/: ebuild.docbook
doc/package/ebuild/: helper_functions.docbook  phases.docbook
lib/_emerge/: AbstractDepPriority.py  AbstractEbuildProcess.py  AbstractPollTask.py  AsynchronousLock.py  AsynchronousTask.py  AtomArg.py  Binpkg.py  BinpkgEnvExtractor.py  BinpkgExtractorAsync.py  BinpkgFetcher.py  BinpkgPrefetcher.py  BinpkgVerifier.py  Blocker.py  BlockerCache.py  BlockerDB.py  BlockerDepPriority.py  CompositeTask.py  DepPriority.py  DepPriorityNormalRange.py  DepPrioritySatisfiedRange.py  Dependency.py  DependencyArg.py  EbuildBinpkg.py  EbuildBuild.py  EbuildBuildDir.py  EbuildExecuter.py  EbuildFetcher.py  EbuildFetchonly.py  EbuildIpcDaemon.py  EbuildMerge.py  EbuildMetadataPhase.py  EbuildPhase.py  EbuildProcess.py  EbuildSpawnProcess.py  FakeVartree.py  FifoIpcDaemon.py  JobStatusDisplay.py  MergeListItem.py  MetadataRegen.py  MiscFunctionsProcess.py  (+43 more)
lib/_emerge/resolver/: DbapiProvidesIndex.py  backtracking.py  circular_dependency.py  meson.build  output.py  output_helpers.py  package_tracker.py  slot_collision.py
lib/portage/: __init__.py  _global_updates.py  _legacy_globals.py  _selinux.py  binpkg.py  checksum.py  const.py  const_autotool.py  cvstree.py  data.py  debug.py  dispatch_conf.py  eapi.py  eclass_cache.py  exception.py  getbinpkg.py  glsa.py  gpg.py  gpkg.py  installation.py  jobserver.py  localization.py  locks.py  mail.py  manifest.py  meson.build  metadata.py  module.py  news.py  output.py  process.py  progress.py  update.py  versions.py  xpak.py
lib/portage/_compat_upgrade/: binpkg_compression.py  binpkg_format.py  binpkg_multi_instance.py  default_locations.py  meson.build
lib/portage/_emirrordist/: Config.py  ContentDB.py  DeletionIterator.py  DeletionTask.py  FetchIterator.py  FetchTask.py  MirrorDistTask.py  __init__.py  main.py  meson.build
lib/portage/_sets/: ProfilePackageSet.py  __init__.py  base.py  dbapi.py  files.py  libs.py  meson.build  profiles.py  security.py  shell.py
lib/portage/binrepo/: config.py  meson.build
lib/portage/cache/: __init__.py  anydbm.py  cache_errors.py  ebuild_xattr.py  flat_hash.py  fs_template.py  mappings.py  meson.build  metadata.py  sql_template.py  sqlite.py  template.py  volatile.py
lib/portage/dbapi/: DummyTree.py  IndexedPortdb.py  IndexedVardb.py  _ContentsCaseSensitivityManager.py  _MergeProcess.py  _SyncfsProcess.py  _VdbMetadataDelta.py  __init__.py  _expand_new_virt.py  _similar_name_search.py  bintree.py  cpv_expand.py  dep_expand.py  meson.build  porttree.py  vartree.py  virtual.py
lib/portage/dep/: __init__.py  _dnf.py  _slot_operator.py  dep_check.py  libc.py  meson.build
lib/portage/elog/: __init__.py  filtering.py  meson.build  messages.py  mod_custom.py  mod_echo.py  mod_mail.py  mod_mail_summary.py  mod_save.py  mod_save_summary.py  mod_syslog.py
lib/portage/emaint/: __init__.py  defaults.py  main.py  meson.build
lib/portage/env/: __init__.py  config.py  loaders.py  meson.build  validators.py
lib/portage/package/: meson.build
lib/portage/proxy/: __init__.py  lazyimport.py  meson.build  objectproxy.py
lib/portage/repository/: config.py  meson.build
lib/portage/sync/: __init__.py  (+7 more)
man/ru/: color.map.5  dispatch-conf.1  ebuild.1  env-update.1  etc-update.1  fixpackages.1  meson.build
src/: Makefile.am  Makefile.in  chpathtool.c  meson.build  portage_util__whirlpool.c  portage_util_file_copy_reflink_linux.c  portage_util_libc.c  tbz2tool.c
src/bsd-flags/: Makefile.in  PKG-INFO  chflags.c  setup.cfg  setup.py
src/python-missingos/: ChangeLog  PKG-INFO  README  missingos.c  setup.cfg  setup.py
src/sandbox/: Makefile  libsandbox.c  sandbox.bashrc  sandbox.c
src/sandbox-1.1/: ChangeLog  Makefile  canonicalize.c  create-localdecls  getcwd.c  libctest.c  libsandbox.c  sandbox.bashrc  sandbox.c  sandbox.h  sandbox_futils.c
src/sandbox-dev/: ChangeLog  Makefile  canonicalize.c  create-localdecls  libctest.c  libsandbox.c  sandbox.bashrc  sandbox.c  sandbox.h  sandbox_futils.c
(+1886 files in other folders)
