[project]
name = 'portage'
dynamic = ['version']
description = 'Portage is the package management and distribution system for Gentoo'
readme = 'README.md'
requires-python = '>=3.9'
license = {file = "LICENSE"}
authors = [
  {name = 'Gentoo Portage Development Team', email = 'dev-portage@gentoo.org'},
]

[build-system]
build-backend = 'mesonpy'
requires = ['meson-python']

[tool.meson-python.args]
# To get a pure wheel:
# python -m build --wheel -Csetup-args="-Dnative-extensions=false"
setup = ['-Dsystem-wide=false']

[project.scripts]
archive-conf = 'portage.util.bin_entry_point:bin_entry_point'
dispatch-conf = 'portage.util.bin_entry_point:bin_entry_point'
ebuild = 'portage.util.bin_entry_point:bin_entry_point'
egencache = 'portage.util.bin_entry_point:bin_entry_point'
emaint = 'portage.util.bin_entry_point:bin_entry_point'
emerge = 'portage.util.bin_entry_point:bin_entry_point'
emirrordist = 'portage.util.bin_entry_point:bin_entry_point'
env-update = 'portage.util.bin_entry_point:bin_entry_point'
fixpackages = 'portage.util.bin_entry_point:bin_entry_point'
glsa-check = 'portage.util.bin_entry_point:bin_entry_point'
gpkg-sign = 'portage.util.bin_entry_point:bin_entry_point'
portageq = 'portage.util.bin_entry_point:bin_entry_point'
quickpkg = 'portage.util.bin_entry_point:bin_entry_point'
regenworld = 'portage.util.bin_entry_point:bin_entry_point'

[tool.pytest.ini_options]
markers = [
    "ft: functional tests (select: '-m ft'; deselect with '-m \"not ft\"')",
    "stress: stress tests (select: '-m stress'; deselect with '-m \"not stress\"')",
    "unit: unit tests (select: '-m unit'; deselect with '-m \"not unit\"')",
]
